# UBB-CS

./: README.md
1stSemester/Computer systems architecture/lab12/: build.bat  main.c  modul.asm
1stSemester/Computer systems architecture/lab5/: 10.lst  8.asm
1stSemester/Computer systems architecture/lab6/: 17.asm
2ndSemester/Data structures and algorithms/ColectieL7/: App.cpp
2ndSemester/Data structures and algorithms/MultimeCuRelatieL3/: CMakeLists.txt
2ndSemester/Data structures and algorithms/MultimeCuRelatieL3/Multime(cu-rel)/: IteratorMultime.cpp  IteratorMultime.h  Multime.cpp
2ndSemester/Data structures and algorithms/MultimeCuRelatieL3/Teste(cu relatie)/: TestScurt.h
2ndSemester/Data structures and algorithms/MultimeL6/: App.cpp  CMakeLists.txt
2ndSemester/Data structures and algorithms/VectorDinamicL1/: .gitignore  App.cpp  IteratorVectorDinamic.cpp  VectorDinamic.h
2ndSemester/Object Oriented programming/MovieRentalAppL8/: .clang-tidy  movie.h  repository.cpp  repository.h  service.cpp  service.h  shoppingCart.cpp  validator.cpp  validator.h
2ndSemester/Object Oriented programming/MovieRentalAppQT/: CosReadOnlyGUI.h  GUI.cpp  GUI.h  repository.h  service.cpp  service.h  tests.cpp
2ndSemester/Object Oriented programming/MovieRentalAppQT-V1/: GUI.cpp  GUI.h  UI.cpp  service.cpp  service.h  validator.h
2ndSemester/Object Oriented programming/Simulare/: domain.h  gui.h  repo.cpp  repo.h  service.cpp
2ndSemester/Object Oriented programming/lab2-5/: .gitignore  CMakeLists.txt  MyList.c  MyList.h  controller.c  entity.h  mysort.c  mysort.h  tests.c  validation.c
2ndSemester/Object Oriented programming/pregatireSimulare1/: GUI.h  MyTable.h  repo.h  service.cpp  student.cpp  student.h  teste.cpp  teste.h
3rd Semester/Computer networks/Lab/: proiect.pkt
3rd Semester/Databases/Exam/: simulare - oser.sql  simulare - vanzari.sql
4th Semester/Database management systems/Lab4/: Lab4.sln
5th Semester/Applications of geometry to computer science/AGI_Lab2/: L3.py  main.py  test1.txt  test2.txt
5th Semester/Formal languages and compiler design/LFTC-T1/: CMakeLists.txt  cerc.txt  cmmdc.txt  lab1.txt  lab1_1.cpp  lab1_2.cpp  lab1_3.cpp  lab1_3.txt  suma.txt
5th Semester/Formal languages and compiler design/LFTC-T2/: CMakeLists.txt  FIP.txt  TS.txt  activitate1.txt  activitate2.txt  af  afd.txt  afn.txt  bnf  ebnf  lab2_1.cpp  lab2_2.cpp  main.cpp
5th Semester/Parallel and distribuited programming/InClass1PPD/: CMakeLists.txt  main.cpp
5th Semester/Parallel and distribuited programming/InClass3PPD/: CMakeLists.txt  hello.cpp  suma.cpp  suma2.cpp
FP/lab1/: cmmdc.py
FirstSemester/ASC/asc1/: ex.asm  try.asm
FirstSemester/ASC/ceva/: practic.asm
FirstSemester/ASC/de_test/: de_test.asm
Fourth Semester/Database management systems/: lab3 - Transactions.sql
PycharmProjects/lab2/: tests.py
PycharmProjects/lab2.1/: 1.py  10.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  lab 2.py
SecondSemester/DS/: PopLarisa215.mw  lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  lab6.mw  sesiune.mw  test1.mw
SecondSemester/Data structures and algorithms/VectorDinamicL1/: CMakeLists.txt  IteratorVectorDinamic.h  TestScurt.cpp  TestScurt.h  VectorDinamic.cpp
SecondSemester/OOP/lab2-4/: .gitignore  CMakeLists.txt  MyList.c  MyList.h  controller.c  controller.h  entity.c  entity.h  main.c  repository.c  repository.h  tests.c  ui.c  ui.h  validation.c  validation.h
SecondSemester/Object Oriented programming/MovieRentalAppL8/: CMakeLists.txt  UI.h  diagram.puml  main.cpp  tests.h
SecondSemester/Object Oriented programming/MovieRentalAppQT/: CMakeLists.txt  CosCRUDGUI.h  GUI.h  MovieGUI.h  main.cpp  movie.cpp  observer.h  repository.cpp
SecondSemester/Object Oriented programming/lab2-5/: CMakeLists.txt  Cerinta.md  MyList.c  MyList.h  controller.c  controller.h  entity.c  entity.h  tests.h  ui.c  validation.h
(+529 files in other folders)
